# stellar-raise-contracts

./: .cspell.json  .env.example  .gitignore  .prettierrc  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  TODO.md  create_github_issues.py  eslint.config.mjs  final_issues.txt  issue.md  issues_batch2.txt  jest.config.json  jest.setup.ts  milestone_nfts.md  milestone_nfts.test.tsx  milestone_nfts.tsx  more_issues.txt  notes.md  npm_package_lock.md  npm_package_lock.test.rs  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.cjs  readme_md_installation.md  readme_md_installation.test.js  tsconfig.json
.github/: dependabot.yml
.husky/: pre-push
contracts/factory/: Cargo.toml
contracts/factory/src/: batch_contribute.rs  lib.rs  test.rs
contracts/zk_rollup/: Cargo.toml
contracts/zk_rollup/src/: lib.rs  main.rs
coverage/: clover.xml  coverage-final.json  lcov.info
docs/: access_delegation.md  admin_upgrade_mechanism.md  campaign_goal_minimum.md  celebration_maintainability.md  contract_state_size.md  css_variables_usage.md  frontend_global_error.md  frontend_header_responsive.md  impact_tracking.md  infrastructure_monitoring.md  milestone_countdown.md  milestone_notifications.md  performance_profiling.md  performance_regression_detection.md  plasma_chain.md  property_based_testing.md  proptest_generator_boundary.md  readme_md_installation.md  reward_distribution.md  security_patch_verification.md  security_policy_enforcement.md  security_regression.md  sidechain_integration.md  success_stories.md  zk_proof_verification.md  zk_rollups.md
frontend/: App.tsx  index.html  main.tsx  package-lock.json  package.json  tsconfig.json  vitest.config.ts
scripts/: deploy.sh  deployment_shell_script.md  deployment_shell_script.sh  deployment_shell_script.test.sh  github_actions_test.md  github_actions_test.sh  github_actions_test.test.sh  infrastructure_monitoring.sh  infrastructure_monitoring.test.sh  interact.sh  performance_regression_detection.sh  performance_regression_detection.test.sh  security_patch_verification.sh  security_patch_verification.test.sh  security_policy_enforcement.sh  security_policy_enforcement.test.sh  verify_env.sh  wasm_build_pipeline.md  (+2 more)
(+2214 files in other folders)
